--- a/roles/openshift_openstack/defaults/main.yml
+++ b/roles/openshift_openstack/defaults/main.yml
@@ -43,6 +43,10 @@ openshift_openstack_infra_floating_ip: true
 openshift_openstack_compute_floating_ip: true
 openshift_openstack_etcd_floating_ip: true
 openshift_openstack_load_balancer_floating_ip: true
+# https://access.redhat.com/support/policy/updates/openstack/platform ; pike = RHOSP 12
+# https://docs.openstack.org/heat/pike/template_guide/hot_spec.html#pike
+# https://docs.openstack.org/heat/pike/template_guide/hot_spec.html#newton
+# Da controllare se l'OpenStack al DAG in ambiente Test supporti o no i templates tipo 'pike'
 openshift_openstack_heat_template_version: pike
 openshift_openstack_clusterid: openshift
 openshift_openstack_stack_name: "openshift-cluster"
